src/test/resources/de/feu/ps/bridges/serialization/syntax_errors/no_boolean_double_bridge_parameter.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0, 0 | 1 )
( 0, 5 | 1 )

BRIDGES
( 0, 1 | abc )
